plugins {
    id 'java'
    id 'maven-publish'
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'commons-fileupload:commons-fileupload:1.4'
    implementation 'commons-io:commons-io:2.5'
    implementation 'dom4j:dom4j:1.6.1'
    implementation 'org.xerial:sqlite-jdbc:3.8.11.2'

    compileOnly 'mysql:mysql-connector-java:8.0.16'
    compileOnly 'javax.servlet:javax.servlet-api:3.1.0'

    testImplementation 'junit:junit:4.12'
    testImplementation 'org.hamcrest:hamcrest-core:1.3'
    testImplementation 'com.carrotsearch:junit-benchmarks:0.7.2'
}

group = 'se.koc'
version = '1.0.0-SNAPSHOT'
sourceCompatibility = 1.8
targetCompatibility = 1.8
compileJava.options.encoding = 'UTF-8'

java {
    withSourcesJar()
    withJavadocJar()
}

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

sourceSets {
    main {
        java {
            srcDirs 'src'
        }
        resources {
            srcDir 'src'
            exclude '**/*.java'
        }
    }
    test {
        java {
            srcDirs 'test'
        }
    }
}